# noobies

./: .env.example  .gitignore  ARCHITECTURE.md  FRONTEND.md  PHASE5_SUMMARY.md  PHASE6_SEARCH_COMPLETE.md  PHASE7_RECOMMENDATIONS_COMPLETE.md  PHASE8_ADMIN_COMPLETE.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  SEARCH_GUIDE.md  SESSION_SUMMARY.md  STEP5_FRONTEND_COMPLETE.md  docker-compose.yml  package-lock.json  package.json  setup.sh  tsconfig.json  turbo.json  vercel.json
api/: index.ts
apps/api/: .gitignore  README.md  UPLOAD_PIPELINE.md  package.json  tsconfig.json
apps/api/api/: index.ts
apps/api/src/: constants.d.ts  constants.d.ts.map  constants.js  constants.js.map  constants.ts  index.d.ts  index.d.ts.map  index.js  index.js.map  index.ts  server.js  server.js.map  server.ts  worker.d.ts  worker.d.ts.map  worker.js  worker.js.map  worker.ts
apps/api/src/config/: aws.d.ts  aws.d.ts.map  aws.js  aws.js.map  aws.ts
apps/api/src/hooks/: index.d.ts  index.d.ts.map  index.js  index.js.map  index.ts
apps/recommender/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  models.py  package.json  pyproject.toml  recommendations_engine.py  requirements.txt
apps/recommender/app/: main.py
apps/web/: .env.example  README.md  next.config.js  package.json  tailwind.config.js  tailwind.config.js.map  tailwind.config.ts  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/public/: README.md
apps/worker/: package.json  tsconfig.json
apps/worker/src/: index.js  index.js.map  index.ts
scripts/: check_db.mjs  smoke_register.mjs
(+257 files in other folders)
