[tool.poetry]
package-mode = false
name = "recommender"
version = "0.1.0"
description = "AI recommendation microservice"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pymongo = "^4.6.0"
redis = "^5.0.0"
clickhouse-driver = "^0.2.7"
scikit-learn = "^1.4.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
python-dotenv = "^1.0.0"
pydantic = "^2.6.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
